test/testdata/list/join_non_string_error.lox
[].join(2); // error: expected join separator to be a 'string', got 'number'
